syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartfactory.proto";
option java_outer_classname = "ProductionSchedulerProto";

package productionscheduler;

// Production Scheduler Service
service ProductionSchedulerService {
  // Client Streaming: Send a list of orders
  rpc SendOrders(stream Order) returns (ScheduleSummary);

  // Bidirectional Streaming: Live production scheduling
  rpc LiveSchedule(stream Order) returns (stream ScheduleUpdate);
}

// Order message
message Order {
  string order_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  string priority = 4; // HIGH, MEDIUM, LOW
}

// Response to client streaming
message ScheduleSummary {
  int32 total_orders = 1;
  string estimated_completion_time = 2;
  string confirmation_message = 3;
}

// Streaming updates in bidirectional RPC
message ScheduleUpdate {
  string order_id = 1;
  string status = 2; // e.g., "Scheduled", "In Progress", "Completed"
  string estimated_time = 3;
}

